[package]
name = "cvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.cvm-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
# Hamlet test
unicode-segmentation = "1.11.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "z"   # Optimize for size
lto = true        # Link time optimizatin, removes dead code
codegen-units = 1 # Allow for maximum size reduction optimizations
# panic = "abort"   # Don't print stack trace on panic
# Set RUSTFLAGS="-Zlocation-detail=none" to remove file, line and column information
